// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPageReducer LOGIN should make pending to true 1`] = `
Object {
  "error": null,
  "pending": true,
}
`;

exports[`LoginPageReducer LOGIN_FAILURE should have an error and no pending state 1`] = `
Object {
  "error": "login failed",
  "pending": false,
}
`;

exports[`LoginPageReducer LOGIN_SUCCESS should have no error and no pending state 1`] = `
Object {
  "error": null,
  "pending": false,
}
`;

exports[`LoginPageReducer undefined action should return the default state 1`] = `
Object {
  "error": null,
  "pending": false,
}
`;
